--- a/index.html
+++ b/index.html
@@ -70,5 +70,10 @@
         </section>
       </div>
     </div>
+    <footer>
+        Feito pela 
+        <a href="https://beingsight.com.br/" target="_blank">BeingSight</a>
+        <img src="./assets/cupcake-dessert-svgrepo-com.svg" alt="svg de um cupcake">
+    </footer>
   </body>
 </html>
